ingress-nginx.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  namespace: nginx-ingress
spec:
  rules:
  - host: wordpress.xgrid.co
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 80
